Fixed table and pre spacing on mobiles

--- a/_sass/_page-docs.scss
+++ b/_sass/_page-docs.scss
@@ -101,7 +101,10 @@
         max-width: 100%;
     }
     table {
-        margin: 1.5rem -0.75rem;
+        margin: 1.5rem 0;
+        @media (min-width: 720px) {
+            margin: 1.5rem -0.75rem;
+        }
     }
     @media (min-width: 720px) {
         width: calc(100% - 21rem);
